fixed alignment issues with the input fields for role and description

--- a/src/components/System/SystemSecurity/index.css
+++ b/src/components/System/SystemSecurity/index.css
@@ -113,8 +113,21 @@
 
 .role-id,
 .description {
-  justify-content: space-between;
-  width: 35%;
+  display: flex;
+  flex-direction: row;
+}
+
+.form-label {
+  flex: 1;
+}
+.form-input {
+  flex: 1;
+}
+
+.form-role-section {
+  display: flex;
+  width: 40%;
+  flex-direction: column;
 }
 
 .submit-form-top-section {
@@ -521,4 +534,13 @@
 .indicator {
   font-size: 14px;
   text-align: center;
+}
+
+.required:after {
+  content: " *";
+  color: red;
+}
+
+.label {
+  color: #444;
 }
